feito as modificações pedidas em aula

--- a/index.html
+++ b/index.html
@@ -4,35 +4,68 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página Principal</title>
+    <title>South park</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
 
     <div>   
         <div class="logo">
-            <img src="assets/images/logo.png" width="200"/>
+            <img src="assets/images/300px-South-park-renewed.jpg" width="200"/>
         </div>
+        <table style="width: 100%; height: 100%;">
+            <tr>
+                <td style="text-align: center; vertical-align: middle;">
+                    <div>
+                        <P>South Park - Série de TV </P>
+                    </div>
+                </td>
+            </tr>
+        </table>
     </div>
-
+    
     <div class="bar"></div>
 
     <div class="content">
         <div class="sidebar">
-            <h2>Título</h2>
+            <h2>História</h2>
             <ul>
-                <li><a href="#">Links</a></li>
+                <li><a href="#">inicio</a></li>
+                <li><a href="#">criação</a></li>
+                <li><a href="#">Personagens</a></li>
+                <li><a href="#">cidade</a></li>
+                <li><a href="#">pais</a></li>
+                <li><a href="#">criadores</a></li>
+                <li><a href="#">roteiristas</a></li>
+                <li><a href="#">dubladores - EUA</a></li>
+                <li><a href="#">dubladores - BR</a></li>
+                <li><a href="#">Links Externos</a></li>
             </ul>
         </div>
 
         <div class="main">
-            
+            <h2>South Park</h2>
+            <div class="imagem">
+                    <img src="assets/images/250px-South_Park_boys.jpg" width="200"/>
+                    <p>South Park é uma sitcom americana criada por Trey Parker e Matt Stone para o canal Comedy Central. Destinado ao público adulto, o programa tornou-se alvo de debates por suas críticas através de humor negro, cruel, surreal e satírico que abrange uma série de assuntos. A narrativa padrão gira em torno de quatro crianças — Stan Marsh, Kyle Broflovski, Eric Cartman, e Kenny McCormick — e suas aventuras bizarras na cidade-título do programa.</p>
+                    <p>Parker e Stone, que se conheceram na universidade, desenvolveram a série a partir de dois curtas de animação criados por eles em 1992 e 1995. A segunda produção tornou-se um dos primeiros vídeos virais da internet, o que acabou levando ao desenvolvimento do programa. South Park estreou em 13 de agosto de 1997 obtendo êxito instantâneo e alcançando posteriormente as maiores audiências da televisão paga nos Estados Unidos. Apesar de inconsistente em seus índices de audiência, o programa permanece como a atração mais aclamada e duradoura do Comedy Central. Originalmente produzido através de animação de recortes, cada episódio é atualmente realizado em um software que reproduz o estilo característico do programa.</p>
+                    <div>
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/d79ZqISsHFA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    </div>
+            </div>
         </div>
 
         <div class="anchors">
             <h2>Neste Artigo</h2>
             <ul>
-                <li><a href="#">Âncoras</a></li>
+                <li><a href="#">comedy central</a></li>
+                <li><a href="#">histórias do futebol</a></li>
+                <li><a href="#">Nadadores olimpicos</a></li>
+                <li><a href="#">Bob Esponja</a></li>
+                <li><a href="#">Animações</a></li>
+                <li><a href="#">Histórias de vida</a></li>
+                <li><a href="#">Agua vivas</a></li>
+                <li><a href="#">O que fazer quando acordar</a></li>
             </ul>
         </div>
     </div>
